# git-control-mcp

./: .gitignore  AGENTS.md  README.md  git_control_onedir.spec  git_control_onefile.spec  main.py  pr-tool-test.txt  pyproject.toml
docs/: codex-cli.md  git-control-test.md  git-control.md  mcp-test-example.md  packaging.md  session-next.md  workflow.md
docs/adr/: ADR-001-specs-workflow.md  ADR-002-src-layout.md  ADR-003-stdio-transport.md  ADR-004-root-scripts.md  ADR-005-remove-legacy-entrypoints.md  ADR-006-git-control-focus.md  ADR-007-script-documentation.md  ADR-template.md
scripts/: README.md  build_dist_onedir.sh  git_control_checkout_branch.sh  git_control_commit_changes.sh  git_control_create_pull_request.sh  git_control_fetch.sh  git_control_push_branch.sh  git_control_run_git.sh  git_control_stage_deletions.sh  git_control_stage_files.sh  git_control_worktree.sh  run_client.sh  run_server.sh
specs/: S001.md  S002.md  S003.md  S004.md  S005.md  S006.md  S007.md  S008.md  S009.md  S010.md  S011.md  S012.md  S013.md  S014.md  S015.md  S016.md  S017.md  S018.md  S019.md  plan.md
specs/git-control-tests/: README.md  TC002-stage-files-rejects-empty-list.md  TC009-checkout-branch-rejects-empty-name.md  TC013-run-git-rejects-disallowed-subcommand.md  TC015-create-pull-request-validates-title-body.md  TC017-worktree-adds-absolute-path.md
src/client/: __init__.py  weather_client.py
src/git_control/: __init__.py  __main__.py  server.py  tools.py
src/weather/: __init__.py  api.py  server.py  tools.py
tests/: test_git_control_tools.py
(+16 files in other folders)
