[project]
name = "mcp-server-1"
version = "0.1.0"
description = "Test MCP Server. The project is being used to understand how MCP Servers work."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.0",
]
